@@ -1,2 +1,13 @@
 # hydrogen-fxwidgets
+
 JavaFX 12 Widgets
+
+### Run in IntelliJ
+
+Add the following to JVM arguments:
+
+```
+--module-path ${JFX_LIB} --add-modules=javafx.controls,javafx.fxml
+```
+
+where `JFX_LIB` is environment variable pointing to `lib` folder of JavaFX SDK installation.
